# vs_uniform_repro

./: CMakeLists.txt  Loader.cpp  README  Shader.frag  Shader.vert
